// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`upload mult fail and reupload action test 1`] = `
Array [
  Object {
    "payload": Object {
      "upload": "uploadKey",
    },
    "type": "Upload/registerUpload",
  },
  Object {
    "payload": Object {
      "filePath": "filePathOne",
      "name": "fileOne",
      "upload": "uploadKey",
    },
    "type": "Upload/pushItem",
  },
  Object {
    "payload": Object {
      "filePath": "filePathTwo",
      "name": "fileTwo",
      "upload": "uploadKey",
    },
    "type": "Upload/pushItem",
  },
  Object {
    "payload": Object {
      "filePath": "filePathThree",
      "name": "fileThree",
      "upload": "uploadKey",
    },
    "type": "Upload/pushItem",
  },
  Object {
    "payload": Object {
      "upload": "uploadKey",
    },
    "type": "Upload/startUpload",
  },
  Object {
    "payload": Object {
      "upload": "uploadKey",
    },
    "type": "Upload/startUploadItem",
  },
  Object {
    "payload": Object {
      "id": "123456",
      "upload": "uploadKey",
    },
    "type": "Upload/successUploadItem",
  },
  Object {
    "payload": Object {
      "upload": "uploadKey",
    },
    "type": "Upload/startUploadItem",
  },
  Object {
    "payload": Object {
      "id": "123456",
      "upload": "uploadKey",
    },
    "type": "Upload/successUploadItem",
  },
  Object {
    "payload": Object {
      "upload": "uploadKey",
    },
    "type": "Upload/startUploadItem",
  },
  Object {
    "payload": Object {
      "upload": "uploadKey",
    },
    "type": "Upload/failedUploadItem",
  },
  Object {
    "payload": Object {
      "upload": "uploadKey",
    },
    "type": "Upload/uploadComplete",
  },
  Object {
    "payload": Object {
      "upload": "uploadKey",
    },
    "type": "Upload/startUpload",
  },
  Object {
    "payload": Object {
      "upload": "uploadKey",
    },
    "type": "Upload/startUploadItem",
  },
  Object {
    "payload": Object {
      "id": "123456",
      "upload": "uploadKey",
    },
    "type": "Upload/successUploadItem",
  },
  Object {
    "payload": Object {
      "upload": "uploadKey",
    },
    "type": "Upload/uploadComplete",
  },
]
`;

exports[`upload mult success action test 1`] = `
Array [
  Object {
    "payload": Object {
      "upload": "uploadKey",
    },
    "type": "Upload/registerUpload",
  },
  Object {
    "payload": Object {
      "filePath": "filePathOne",
      "name": "fileOne",
      "upload": "uploadKey",
    },
    "type": "Upload/pushItem",
  },
  Object {
    "payload": Object {
      "filePath": "filePathTwo",
      "name": "fileTwo",
      "upload": "uploadKey",
    },
    "type": "Upload/pushItem",
  },
  Object {
    "payload": Object {
      "filePath": "filePathThree",
      "name": "fileThree",
      "upload": "uploadKey",
    },
    "type": "Upload/pushItem",
  },
  Object {
    "payload": Object {
      "upload": "uploadKey",
    },
    "type": "Upload/startUpload",
  },
  Object {
    "payload": Object {
      "upload": "uploadKey",
    },
    "type": "Upload/startUploadItem",
  },
  Object {
    "payload": Object {
      "id": "123456",
      "upload": "uploadKey",
    },
    "type": "Upload/successUploadItem",
  },
  Object {
    "payload": Object {
      "upload": "uploadKey",
    },
    "type": "Upload/startUploadItem",
  },
  Object {
    "payload": Object {
      "id": "123456",
      "upload": "uploadKey",
    },
    "type": "Upload/successUploadItem",
  },
  Object {
    "payload": Object {
      "upload": "uploadKey",
    },
    "type": "Upload/startUploadItem",
  },
  Object {
    "payload": Object {
      "id": "123456",
      "upload": "uploadKey",
    },
    "type": "Upload/successUploadItem",
  },
  Object {
    "payload": Object {
      "upload": "uploadKey",
    },
    "type": "Upload/uploadComplete",
  },
]
`;

exports[`upload one file fail action test 1`] = `
Array [
  Object {
    "payload": Object {
      "upload": "uploadKey",
    },
    "type": "Upload/registerUpload",
  },
  Object {
    "payload": Object {
      "filePath": "filePathOne",
      "name": "fileOne",
      "upload": "uploadKey",
    },
    "type": "Upload/pushItem",
  },
  Object {
    "payload": Object {
      "upload": "uploadKey",
    },
    "type": "Upload/startUpload",
  },
  Object {
    "payload": Object {
      "upload": "uploadKey",
    },
    "type": "Upload/startUploadItem",
  },
  Object {
    "payload": Object {
      "upload": "uploadKey",
    },
    "type": "Upload/failedUploadItem",
  },
  Object {
    "payload": Object {
      "upload": "uploadKey",
    },
    "type": "Upload/uploadComplete",
  },
]
`;

exports[`upload one file success action test 1`] = `
Array [
  Object {
    "payload": Object {
      "upload": "uploadKey",
    },
    "type": "Upload/registerUpload",
  },
  Object {
    "payload": Object {
      "filePath": "filePathOne",
      "name": "fileOne",
      "upload": "uploadKey",
    },
    "type": "Upload/pushItem",
  },
  Object {
    "payload": Object {
      "upload": "uploadKey",
    },
    "type": "Upload/startUpload",
  },
  Object {
    "payload": Object {
      "upload": "uploadKey",
    },
    "type": "Upload/startUploadItem",
  },
  Object {
    "payload": Object {
      "id": "123456",
      "upload": "uploadKey",
    },
    "type": "Upload/successUploadItem",
  },
  Object {
    "payload": Object {
      "upload": "uploadKey",
    },
    "type": "Upload/uploadComplete",
  },
]
`;
